cluster/crafty/service-minecraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafty-minecraft-lb
  namespace: crafty
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.2.89
  externalTrafficPolicy: Local
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      protocol: TCP
