cluster/crafty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafty-panel
  namespace: crafty
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-domeneshop
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - console.nebulahvelvet.no
      secretName: crafty-console-tls
  rules:
    - host: console.nebulahvelvet.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: craftycontroller-https
                port:
                  number: 8443
