cluster/crafty/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crafty-internal
  namespace: crafty
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`console.local.net`)
      kind: Rule
      services:
        - name: craftycontroller-https
          port: 8443
          scheme: https
          serversTransport: crafty-skipverify
